configs for REST api

--- a/epc-modelling/WebContent/index.html
+++ b/epc-modelling/WebContent/index.html
@@ -4,6 +4,6 @@
 	<title>index</title>
 	<meta http-equiv="Content-Type" context="text/html; charset=UTF-8"/>
 	<body>
-		The EPC application is running!
+		The EPC application is running! How cool is that!
 	</body>
 </html>
